# python-fastapi-text2sql-demo

./: pyproject.toml
app/: main.py
app/langgraph/: dummy_data.py  graph.py  state.py  supervisor_graph.py
app/langgraph/agents/: __init__.py  planner.py  supervisor.py  workers.py
app/langgraph/agents/workers/: __init__.py  analysis_agent.py  research_agent.py  sql_agent.py
app/services/: bedrock.py
docs/: implementation_plan.md  task.md  walkthrough.md
