[project]
name = "python-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.41.5",
    "fastapi>=0.122.0",
    "langchain-aws>=1.1.0",
    "langgraph>=1.0.4",
    "python-dotenv>=1.2.1",
    "sqlglot>=28.0.0",
    "uvicorn>=0.38.0",
]
